syntax = "proto3";

option java_multiple_files = true;
option java_package = "pers.jz.grpc.cacheService";
option java_outer_classname = "CacheProto";
option objc_class_prefix = "JZ";

package rpc;
service Cache {
    rpc Store(StoreReq) returns (StoreResp) {}
    rpc Get(GetReq) returns (GetResp) {}
}
message StoreReq {
    string key = 1;
    bytes val = 2;
}
message StoreResp {
}
message GetReq {
    string key = 1;
}
message GetResp {
    bytes val = 1;
}